--- a/popup.html
+++ b/popup.html
@@ -14,8 +14,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <h1>This is the home page</h1>
     
+    <h1>This is a popup</h1>
   </body>
 </html>
