--- a/popup.html
+++ b/popup.html
@@ -2,56 +2,60 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
-  </head>
-  <body>
-    <!--[if lt IE 7]>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/popup.css">
+  <link rel="stylesheet" href="css/fontawesome-all.min.css">
+  <script src="src/save.js"></script>
+</head>
+
+<body>
+  <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
-    <div class="option">
-        <p>Save all open tabs</p>
-    </div>
-    <div class="option">
-      <p>Select tabs to save</p>
-    </div>
-    <div class="option">
-      <p>Open tab set</p>
-    </div>
-    <div class="option">
-      <p>Open tab set in new window</p>
-    </div>
-    <div class="option">
-      <p>Edit tab set</p>
-    </div>
-    <div class="option">
-      <p>Remove tab set</p>
-    </div>
-    <div class="option">
-      <p>Order tab sets</p>
-    </div>
-    <div class="option">
-      <p>Schedule tab set</p>
-    </div>
-    <div class="option">
-      <p>Sort tabs</p>
-    </div>
-    <div class="option">
-      <p>Separate tabs</p>
-    </div>
-    <div class="option">
-      <p>View CPU usage</p>
-    </div>
-    <div class="option">
-      <p>Customize me!</p>
-    </div>
-  </body>
+
+  <button class="save">Save all open tabs</button>
+  <div class="option">
+    <p>Select tabs to save</p>
+  </div>
+  <div class="option">
+    <p>Open tab set</p>
+  </div>
+  <div class="option">
+    <p>Open tab set in new window</p>
+  </div>
+  <div class="option">
+    <p>Edit tab set</p>
+  </div>
+  <div class="option">
+    <p>Remove tab set</p>
+  </div>
+  <div class="option">
+    <p>Order tab sets</p>
+  </div>
+  <div class="option">
+    <p>Schedule tab set</p>
+  </div>
+  <div class="option">
+    <p>Sort tabs</p>
+  </div>
+  <div class="option">
+    <p>Separate tabs</p>
+  </div>
+  <div class="option">
+    <p>View CPU usage</p>
+  </div>
+  <div class="option">
+    <p>Customize me!</p>
+  </div>
+</body>
+
 </html>
