--- a/popup.html
+++ b/popup.html
@@ -10,48 +10,48 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
-    <div class="option">
-        <p>Save all open tabs</p>
+    <div class="option save">
+        <p><i class="far fa-save fa-lg"></i>Save all open tabs</p>
     </div>
-    <div class="option">
-      <p>Select tabs to save</p>
+    <div class="option select-save">
+      <p><i class="far fa-check-circle fa-lg"></i>Select tabs to save</p>
     </div>
-    <div class="option">
-      <p>Open tab set</p>
+    <div class="option open">
+        <p><i class="far fa-folder-open fa-lg"></i>Open tab set</p>
     </div>
-    <div class="option">
-      <p>Open tab set in new window</p>
+    <div class="option open-window">
+      <p><i class="far fa-window-maximize fa-lg"></i>Open tab set in new window</p>
     </div>
-    <div class="option">
-      <p>Edit tab set</p>
+    <div class="option edit">
+      <p><i class="far fa-edit fa-lg"></i>Edit tab set</p>
     </div>
-    <div class="option">
-      <p>Remove tab set</p>
+    <div class="option remove">
+      <p><i class="far fa-trash-alt fa-lg"></i>Remove tab set</p>
     </div>
-    <div class="option">
-      <p>Order tab sets</p>
+    <div class="option order">
+      <p><i class="fas fa-sort fa-lg"></i>Order tab sets</p>
     </div>
-    <div class="option">
-      <p>Schedule tab set</p>
+    <div class="option schedule">
+      <p><i class="far fa-clock fa-lg"></i>Schedule tab set</p>
     </div>
-    <div class="option">
-      <p>Sort tabs</p>
+    <div class="option sort">
+      <p><i class="fas fa-bars fa-lg"></i>Sort tabs</p>
     </div>
-    <div class="option">
-      <p>Separate tabs</p>
+    <div class="option separate">
+      <p><i class="far fa-window-restore fa-lg"></i>Separate tabs</p>
     </div>
-    <div class="option">
-      <p>View CPU usage</p>
+    <div class="option cpu">
+      <p><i class="fas fa-microchip fa-lg"></i>View CPU usage</p>
     </div>
-    <div class="option">
-      <p>Customize me!</p>
+    <div class="option customize">
+      <p><i class="far fa-smile fa-lg"></i>Customize me!</p>
     </div>
   </body>
 </html>
