--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
+    <link rel="stylesheet" href="../css/home.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>New Crappy Clippy</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -15,7 +17,24 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <h1>This is the home page</h1>
+    <div class="title">Hi! I'm CrappyClippy</div>
+    <div class="input-wrapper">
+      <input type="text" placeholder="Can I assist you today?"/>
+      <input type="submit" value="Go"> 
+    </div>
+    <img src="../img/placeholder_clippy.png" usemap="#clippymap" alt="shit" style="float:left; opacity: 1;height: 20%; width: 20%; margin-left: 30px;"></img>
+    <map name="clippymap">
+      <area shape="rect" coords="150,200,50,100" alt="clippy" href="http://lmgtfy.com">
+    </map>
+
+    <img src="../img/doge.png" alt="doggo"></img>
     
+    <div class="tab-groups">
+      <p>Quick Access</p>
+      <li>Tab Group 1</li>
+      <li>Tab Group 2</li>
+      <li>Tab Group 3</li>
+    </div>
   </body>
+
 </html>
