Fixed button not being recognized

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/popup.css">
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
-  <script src="src/save.js"></script>
 </head>
 
 <body>
@@ -56,6 +55,8 @@
   <div class="option">
     <p>Customize me!</p>
   </div>
+  <script src="js/save.js"></script>
+
 </body>
 
 </html>
