Minor syntax fixes
Fixed minor syntax issues to get button to save to local storage

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,9 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-  <button class="save">Save all open tabs</button>
+  <div class="save option">
+    <p>Save all open tabs</p>
+  </div>
   <div class="option">
     <p>Select tabs to save</p>
   </div>
