Added Redirect to input set name
Clicking "Save All Tabs" redirects to save.html where the user inputs a set name

--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
   <div class="option">
     <p>Customize me!</p>
   </div>
-  <script src="js/save.js"></script>
+  <script src="js/redirect.js"></script>
 
 </body>
 
