Clicking a set sets it for removal

--- a/remove.html
+++ b/remove.html
@@ -21,5 +21,10 @@
   <div class="setList">
 
   </div>
+
+  <p>
+    <button class="remove">Remove set</button>
+  </p>
+
   <script src="js/remove.js"></script>
 </body>
