Add favicons to tab selection page

--- a/save.html
+++ b/save.html
@@ -21,7 +21,7 @@
   <div class="home option">
       <p><i class="fas fa-arrow-left fa-lg"></i> Back</p>
   </div>
-  <input id="setName" type="text" name="name" value="MySet">
+  <input id="setName" type="text" name="name" placeholder="MySet" autofocus>
   <button class="save">Save Set</button>
 
   <script src="js/save.js"></script>
