Sets are removed from local storage upon button click

--- a/remove.html
+++ b/remove.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <div class="home option">
+      <p><i class="fas fa-arrow-left fa-lg"></i> Back</p>
+  </div>
   <div class="setList">
 
   </div>
