--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
+
     <div class="option save">
         <p><i class="far fa-save fa-lg"></i>Save all open tabs</p>
     </div>
@@ -53,6 +53,9 @@
     </div>
     <div class="option customize">
       <p><i class="far fa-smile fa-lg"></i>Customize me!</p>
+    </div>
+    <div class="option surprise">
+      <p><i class="fas fa-user-secret fa-lg"></i>Click for surprise ;)</p>
     </div>
     <script src="js/redirect.js"></script>
   </body>
