load three sets into home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/index.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>New Crappy Clippy</title>
@@ -30,11 +30,9 @@
     <img src="../img/doge.png" alt="doggo"></img>
     
     <div class="tab-groups">
-      <p>Quick Access</p>
-      <li>Tab Group 1</li>
-      <li>Tab Group 2</li>
-      <li>Tab Group 3</li>
+      <p><b>Quick Access</b></p>
     </div>
+    <script src="js/loadThree.js"></script>
   </body>
 
 </html>
