open sets in home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
     <div class="title">Hi! I'm CrappyClippy</div>
     <div class="input-wrapper">
       <input type="text" placeholder="Can I assist you today?"/>
@@ -29,10 +28,10 @@
 
     <img src="../img/doge.png" alt="doggo"></img>
     
-    <div class="tab-groups">
-      <p><b>Quick Access</b></p>
-    </div>
-    <script src="js/loadThree.js"></script>
   </body>
-
+    <h1><b>Quick Access</b></h1>
+    <div class="tab-groups">    
+    </div>
+    
+    <script src="js/loadThree.js"></script>
 </html>
