Sort tabs by time updated

--- a/sort.html
+++ b/sort.html
@@ -21,10 +21,13 @@
       <p><i class="fas fa-arrow-left fa-lg"></i> Back</p>
   </div>
   <div class="option by-name">
-      <p><i class=""></i>Sort by Name</p>
+      <p><i class=""></i>Sort by name</p>
   </div>
   <div class="option by-domain">
-    <p><i class=""></i>Sort by Domain</p>
+    <p><i class=""></i>Sort by domain</p>
+  </div>
+  <div class="option by-time">
+    <p><i class=""></i>Sort by time updated</p>
   </div>
 
   <script src="js/sort.js"></script>
