Sets cannot have an empty name when you save

--- a/selectSave.html
+++ b/selectSave.html
@@ -15,14 +15,17 @@
   <link rel="stylesheet" href="css/popup.css">
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
   <div class="home option">
       <p><i class="fas fa-arrow-left fa-lg"></i>Back</p>
   </div>
-  <input id="setName" type="text" name="name" placeholder="MySet" autofocus>
-  <button class="save">Save Set</button>
+  <div class="content">
+    <input id="setName" type="text" name="name" placeholder="MySet" autofocus>
+    <button class="save">Save Set</button>
+  </div>
 
   <script src="js/selectSave.js"></script>
   <ul class="tabList" id="tabList">
