Cannot save a set with a name that already names a saved set

--- a/save.html
+++ b/save.html
@@ -21,8 +21,10 @@
   <div class="home option">
       <p><i class="fas fa-arrow-left fa-lg"></i> Back</p>
   </div>
-  <input id="setName" type="text" name="name" placeholder="MySet" autofocus>
-  <button class="save">Save Set</button>
+  <div class="content">
+    <input id="setName" type="text" name="name" placeholder="MySet" autofocus>
+    <button class="save">Save Set</button>
+  </div>
 
   <script src="js/save.js"></script>
 </body>
