Drag and drop to order tabs in a set and save to local storage

--- a/editOptions.html
+++ b/editOptions.html
@@ -29,6 +29,9 @@
   <div class="option remove-tabs">
       <p><i class="fas fa-minus fa-lg"></i>Remove tabs from set</p>
   </div>
+  <div class="option order-tabs">
+    <p><i class="fas fa-sort fa-lg"></i>Order tabs</p>
+</div>
 
   <script src="js/edit.js"></script>
 </body>
