--- a/sort.html
+++ b/sort.html
@@ -21,13 +21,13 @@
       <p><i class="fas fa-arrow-left fa-lg"></i> Back</p>
   </div>
   <div class="option by-name">
-      <p><i class="fas fa-language"></i>Sort by name</p>
+      <p><i class="fas fa-language fa-lg"></i>Sort by name</p>
   </div>
   <div class="option by-domain">
-    <p><i class="fas fa-globe"></i>Sort by domain</p>
+    <p><i class="fas fa-globe fa-lg"></i>Sort by domain</p>
   </div>
   <div class="option by-time">
-    <p><i class="fas fa-clock"></i>Sort by time updated</p>
+    <p><i class="fas fa-clock fa-lg"></i>Sort by time updated</p>
   </div>
 
   <script src="js/sort.js"></script>
