--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="title">Hi! I'm CrappyClippy</div>
-    <div class="input-wrapper">
+    <!--<div class="input-wrapper">
       <input type="text" placeholder="Can I assist you today?"/>
       <input type="submit" value="Go"> 
-    </div>
+    </div> -->
+    <div class= "cpuInfo"></div>
+
     <img src="../img/crappyClippy_512x512.png" usemap="#clippymap" alt="shit" style="float:left; opacity: 1;height: 25%; width: 25%; margin-left: 30px;"></img>
     <map name="clippymap">
       <area shape="rect" coords="150,200,50,100" alt="clippy" href="http://lmgtfy.com">
@@ -30,8 +32,8 @@
     
   </body>
     <h1><b>Quick Access</b></h1>
-    <div class="tab-groups">    
-    </div>
-    
+    <div class="tab-groups"></div>
     <script src="js/loadThree.js"></script>
+    <script src="js/cpu.js"></script>
+
 </html>
