clippy occasionally attempts to show you the light

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     </div> -->
     <div class= "cpuInfo"></div>
 
-    <img src="../img/crappyClippy_512x512.png" usemap="#clippymap" alt="shit" style="float:left; opacity: 1;height: 25%; width: 25%; margin-left: 30px;"></img>
-    <map name="clippymap">
-      <area shape="rect" coords="150,200,50,100" alt="clippy" href="http://lmgtfy.com">
-    </map>
+    <img id= "clippy" src="../img/crappyClippy_512x512.png" usemap="#clippymap" alt="shit" style="float:left; opacity: 1;height: 25%; width: 25%; margin-left: 30px;"></img>
+
 
     <img src="../img/doge.png" alt="doggo"></img>
     
@@ -35,5 +33,5 @@
     <div class="tab-groups"></div>
     <script src="js/loadThree.js"></script>
     <script src="js/cpu.js"></script>
-
+    <script src="js/mascot.js"></script>
 </html>
