Alarms Functional and new one's created with new tabs

--- a/popup.html
+++ b/popup.html
@@ -56,7 +56,7 @@
   </div>
   <div class="option alert">
     <p>
-      <i class="fas fa-clock fa-lg"></i>Alert</p>
+      <i class="far fa-bell fa-lg"></i>Alert</p>
   </div>
   <div class="option sort">
     <p>
