--- a/alert.html
+++ b/alert.html
@@ -22,7 +22,7 @@
     <p>
       <i class="fas fa-arrow-left fa-lg"></i> Back</p>
   </div>
-  <input id="time" type="text" name="name" value="1.5" autofocus>
+  <input id="time" type="text" name="name" value=".1" autofocus>
   <button class="save">Save</button>
 
   <script src="js/alert.js"></script>
