Allow All Alarms to be cleared

--- a/alert.html
+++ b/alert.html
@@ -24,6 +24,7 @@
   </div>
   <input id="time" type="text" name="name" value="30" autofocus>
   <button class="save">Save</button>
+  <button class="clear">Clear All</button>
 
   <script src="js/alert.js"></script>
 </body>
