schedule fix attempt
attempted to fix schedule

--- a/popup.html
+++ b/popup.html
@@ -58,5 +58,6 @@
       <p><i class="fas fa-user-secret fa-lg"></i>Click for surprise ;)</p>
     </div>
     <script src="js/redirect.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
