--- a/popup.html
+++ b/popup.html
@@ -22,46 +22,64 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="option save">
-        <p><i class="far fa-save fa-lg"></i>Save all open tabs</p>
-    </div>
-    <div class="option select-save">
-      <p><i class="far fa-check-circle fa-lg"></i>Select tabs to save</p>
-    </div>
-    <div class="option open">
-        <p><i class="far fa-folder-open fa-lg"></i>Open tab set</p>
-    </div>
-    <div class="option open-window">
-      <p><i class="far fa-window-maximize fa-lg"></i>Open tab set in new window</p>
-    </div>
-    <div class="option edit">
-      <p><i class="far fa-edit fa-lg"></i>Edit tab set</p>
-    </div>
-    <div class="option remove">
-      <p><i class="far fa-trash-alt fa-lg"></i>Remove tab set</p>
-    </div>
-    <div class="option order">
-      <p><i class="fas fa-sort fa-lg"></i>Order tab sets</p>
-    </div>
-    <div class="option schedule">
-      <p><i class="far fa-clock fa-lg"></i>Schedule tab set</p>
-    </div>
-    <div class="option sort">
-      <p><i class="fas fa-bars fa-lg"></i>Sort tabs</p>
-    </div>
-    <div class="option separate">
-      <p><i class="far fa-window-restore fa-lg"></i>Separate tabs</p>
-    </div>
-    <div class="option cpu">
-      <p><i class="fas fa-microchip fa-lg"></i>View CPU usage</p>
-    </div>
-    <div class="option customize">
-      <p><i class="far fa-smile fa-lg"></i>Customize me!</p>
-    </div>
-    <div class="option surprise">
-      <p><i class="fas fa-user-secret fa-lg"></i>Click for surprise ;)</p>
-    </div>
-    <script src="js/redirect.js"></script>
-    <script src="js/background.js"></script>
-  </body>
+  <div class="option save">
+    <p>
+      <i class="far fa-save fa-lg"></i>Save all open tabs</p>
+  </div>
+  <div class="option select-save">
+    <p>
+      <i class="far fa-check-circle fa-lg"></i>Select tabs to save</p>
+  </div>
+  <div class="option open">
+    <p>
+      <i class="far fa-folder-open fa-lg"></i>Open tab set</p>
+  </div>
+  <div class="option open-window">
+    <p>
+      <i class="far fa-window-maximize fa-lg"></i>Open tab set in new window</p>
+  </div>
+  <div class="option edit">
+    <p>
+      <i class="far fa-edit fa-lg"></i>Edit tab set</p>
+  </div>
+  <div class="option remove">
+    <p>
+      <i class="far fa-trash-alt fa-lg"></i>Remove tab set</p>
+  </div>
+  <div class="option order">
+    <p>
+      <i class="fas fa-sort fa-lg"></i>Order tab sets</p>
+  </div>
+  <div class="option schedule">
+    <p>
+      <i class="far fa-clock fa-lg"></i>Schedule tab set</p>
+  </div>
+  <div class="option alert">
+    <p>
+      <i class="far fa-bell fa-lg"></i>Tab Timer</p>
+  </div>
+  <div class="option sort">
+    <p>
+      <i class="fas fa-bars fa-lg"></i>Sort tabs</p>
+  </div>
+  <div class="option separate">
+    <p>
+      <i class="far fa-window-restore fa-lg"></i>Separate tabs</p>
+  </div>
+  <div class="option cpu">
+    <p>
+      <i class="fas fa-microchip fa-lg"></i>View CPU usage</p>
+  </div>
+  <div class="option customize">
+    <p>
+      <i class="far fa-smile fa-lg"></i>Customize me!</p>
+  </div>
+  <div class="option surprise">
+    <p>
+      <i class="fas fa-user-secret fa-lg"></i>Click for surprise ;)</p>
+  </div>
+  <script src="js/redirect.js"></script>
+  <script src="js/background.js"></script>
+</body>
+
 </html>
